fix: overlapping box shadows

--- a/client/styles/dashboard.css
+++ b/client/styles/dashboard.css
@@ -26,12 +26,21 @@ body {
 
     font-size: var(--fs-large);
 
-    box-shadow: 0px 0px 14px 4px rgba(0, 0, 0, 0.25);
-
     padding-left: 1em;
     padding-right: 1em;
     padding-bottom: 0.3em;
     padding-top: 0.3em;
+}
+
+.navbar:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    box-shadow: 0px 0px 14px 4px rgba(0, 0, 0, 0.25);
 }
 
 .navbar .navbar__title {
@@ -76,7 +85,19 @@ input:checked + .sidebar {
     position: absolute;
     top: 100%;
     left: 0;
+    height: calc(100ch - 52px);
     padding: 1.875em;
+}
+
+/* https://blog.dudak.me/2014/css-shadows-under-adjacent-elements/ */
+.sidebar:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
     box-shadow: 0px 0px 14px 4px rgba(0, 0, 0, 0.25);
 }
 
